--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Boolean operations on polygons",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "generate-docs": "jsdoc -c ./.jsdoc.json --verbose",
+    "npm-publish": "npm version patch; git push && git push --tags; npm publish",
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "repository": {
     "type": "git",
