--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "mocha --reporter spec",
     "generate-docs": "jsdoc -c ./.jsdoc.json --verbose",
     "npm-publish": "npm version patch; git push && git push --tags; npm publish",
-    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec test/*"
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- -R spec test/*",
+    "build": "webpack --progress --mode=production"
   },
   "repository": {
     "type": "git",
@@ -43,7 +44,9 @@
     "jsdom": "9.12.0",
     "jsdom-global": "2.1.1",
     "minami": "^1.2.3",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "webpack": "^4.2.0",
+    "webpack-cli": "^2.0.13"
   },
   "dependencies": {
     "flatten-js": "^0.3.2"
