--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@flatten-js/boolean-op",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Boolean operations on polygons",
   "main": "dist/main.cjs.js",
   "umd:main": "dist/main.umd.js",
@@ -63,8 +63,7 @@
     "rollup": "^1.7.3",
     "rollup-plugin-node-resolve": "^4.0.0"
   },
-  "dependencies": {
-    "@flatten-js/core": "^1.0.14",
-    "@flatten-js/utils": "^1.0.0"
+  "peerDependencies": {
+    "@flatten-js/core": "^1.0.14"
   }
 }
